...
                Column(
                  key: const Key('sign_up_section'),
                  children: [
                    SignUpForm(authNotifier: authNotifier),
                    Text(l10n.alreadyHaveAccount),
                    TextButton(
                      key: const Key('switch_to_sign_in'),
                      onPressed: () {
                        setState(() {
                          isSignUpForm = false;
                        });
                      },
                      child: Text(l10n.signInInstead),
...
